[package]
name = "back_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.72"
# tokyodoves = "0.1.7"
tokyodoves = { "path" = "C:\\Users\\t_ish\\Documents\\dev\\github\\tokyodoves" }